prod/usernamespaces/testnamespace/patches/enterprise-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enterprise-gateway
spec:
  template:
    spec:
      containers:
        - name: enterprise-gateway
